<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/reset"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:title="@string/menu_reset"/>
    <item
            android:id="@+id/load"
            android:orderInCategory="2"
            android:showAsAction="never"
            android:title="@string/menu_load"/>
    <item
            android:id="@+id/save"
            android:orderInCategory="3"
            android:showAsAction="never"
            android:title="@string/menu_save"/>


    <item
            android:id="@+id/background_solid_color"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_fill"/>

    <item
            android:id="@+id/brush_size"
            android:orderInCategory="200"
            android:showAsAction="never"
            android:title="@string/menu_size"/>


    <item
            android:id="@+id/brush_color"
            android:orderInCategory="201"
            android:showAsAction="never"
            android:title="@string/menu_color"/>
</menu>